Initial conversion of combat to lists
- Includes converting hand actions into a list

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -23,6 +23,18 @@ mouse.tooltip:hover span {
 	background:#C4C4C4 repeat-x 0 0;
 }
 
+#next {
+	position: fixed;
+	bottom: -1px;
+	border: 1px solid #aaa;
+	background-color: #222;
+	padding: 10px 20px 30px 20px;
+}
+
+#next a {
+	color: gold;
+}
+
 #saveDataInput {
 	min-width: inherit;
 	width: 95%
@@ -129,7 +141,7 @@ mouse.tooltip:hover span {
 }
 
 .hidden {
-	display: none !important;;
+	display: none !important;
 }
 
 .close {
@@ -343,6 +355,11 @@ mouse.tooltip:hover span {
 
 .stowed{
 	z-index: 298  !important;
+}
+
+.solidBorderContainer	{
+	border: 1px solid #666;
+	padding: 3px;
 }
 
 .debugLines-audience {
@@ -803,6 +820,71 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	left: 0px;
 	top: -150px;
 	z-index: 1;
+}
+
+
+/*
+Combat display styles
+*/
+#listContainer	{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+/*.radioControl	{
+
+}*/
+
+.listsControl, .limitedListsControl	{
+	display: flex;
+	flex-direction: column;
+	padding: 2px;
+	border: solid 1px #555;
+	margin: 5px;
+}
+
+.limitedListsControl	{
+	min-width: 46%;
+}
+
+@media only screen and (max-width: 500px) {
+	.limitedListsControl, .listsControl {
+		min-width: 99%;
+	}
+	.limitedListsControl .flavorText select, .listsControl .flavorText select {
+		max-width: 500px;
+	}
+}
+
+.whiteList select,.whiteList select:hover,.whiteList select:focus{
+	border:#fff 2px solid;
+	width: 99%;
+	max-width: 400px;
+}
+
+.bratList select,.bratList select:hover,.bratList select:focus{
+	border:#B75D41 2px solid;
+	width: 99%;
+	max-width: 300px;
+}
+
+.meekList select,.meekList select:hover,.meekList select:focus{
+	border:#C44B8B 2px solid;
+	width: 99%;
+	max-width: 300px;
+}
+
+.defList select,.defList select:hover,.defList select:focus{
+	border:#D20000 2px solid;
+	width: 99%;
+	max-width: 300px;
+}
+
+.subList select,.subList select:hover,.subList select:focus{
+	border:#AA4BC8 2px solid;
+	width: 99%;
+	max-width: 300px;
 }
 
 /*
