--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -89,7 +89,7 @@ mouse.tooltip:hover span {
 	max-width: 1000px;
 }
 
-@media only screen and (min-width: 801px) {
+@media only screen and (min-width: 870px) {
 	.customOverlay {
 		left: 300px;
 	}
@@ -249,28 +249,76 @@ mouse.tooltip:hover span {
 	margin-top: 2px;
 }
 
-#savesList {
-	border: 1px solid #ccc;
-	max-width: 700px;
-	width: 95%;
+#savesListContainer {
+	display: flex;
+	flex-direction: column;
+	border: 1px solid #999;
+	max-width: 800px;
 }
 
-#savesList tr {
-	border-top: 1px solid #999;
-	margin: 1px;
-	line-height: 1;
+#savesListContainer .savesListRow {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-items: center;
+	border: 1px solid #999;
+	padding: 4px;
 }
 
-#savesList tr:first-child {
-	border-top: 1px solid #ccc;
+#savesListContainer .savesListRow .saveGroup {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	flex-grow: 1;
+	flex-shrink: 1;
+	/* Set min-width to allow parent correctly to resize this element's children */
+	min-width: 0;
 }
 
-#savesList tr td:first-child {
-	padding: 8px;
+#savesListContainer .savesListRow .saveGroup > div {
+	display: flex;
+	justify-content: center;
+	margin: 0 10px;
+	flex-shrink: 0;
+	flex-grow: 0;
 }
 
-#savesList tr td {
-	margin: 1px;
+
+#savesListContainer .savesListRow .saveGroup .saveId {
+	min-width: 10px;
+}
+
+#savesListContainer .savesListRow .saveGroup .saveButton {
+	min-width: 110px;
+	display: flex;
+	justify-content: center;
+	margin: 0 10px;
+}
+
+#savesListContainer .savesListRow .saveGroup .saveName {
+	width: 60px;
+	color: gold;
+}
+
+#savesListContainer .savesListRow .saveGroup .saveButton input {
+	margin: 3px 0;
+}
+
+#savesListContainer .savesListRow .saveGroup > .saveDetails {
+	flex-grow: 1;
+	flex-shrink: 1;
+	flex-basis: 0px;
+	min-width: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	justify-content: stretch;
+}
+
+#savesListContainer .savesListRow .saveGroup > .saveDetails span {
+	max-height: 80px;
+	overflow-y: hidden;
 }
 
 .datestamp {
@@ -283,7 +331,6 @@ mouse.tooltip:hover span {
 
 .saveMenuButton {
 	background-color: #4372FF !important;
-	margin: 4px 4px 4px 0;
 }
 
 .saveMenuButton:hover {
