Added tattoo feat boost and other minor changes
- Tattoo boost will allow upto 5 random and seleted body parts to add tattoos to
- The tattoo's themselves can be both random and selected
- Permanant versions can be added by changing the tattoo type to `Brand`
- The above boost requires `Missing 'Billboard'` and `'A Living Canvas' feats to unlock.
- Updated the starting text to added reminder about settings and to move the begin button to just below
- Updated the feats text to reflect its recent changes

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -331,6 +331,11 @@ mouse.tooltip:hover span {
 	font-size: 13px;
 }
 
+.listMargin {
+	display: inline-block;
+	margin: 1px 0;
+}
+
 .right {
 	float: right;
 }
@@ -411,8 +416,8 @@ mouse.tooltip:hover span {
 }
 
 .solidBorderContainer	{
-	border: 1px solid #666;
-	padding: 3px;
+	border: 1px solid #333;
+	padding: 5px;
 }
 
 .debugLines-audience {
