Initial changes to tentacle combat to allow for new controls
- Includes initial left action only

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -890,9 +890,14 @@ Combat display styles
 	flex-wrap: wrap;
 }
 
-/*.radioControl	{
+.radioControl	{
+	display: block;
+	width: 100%;
+}
 
-}*/
+.radioControl .extraMargin	{
+	margin-bottom: 20px;
+}
 
 .listsControl, .limitedListsControl	{
 	display: flex;
@@ -918,7 +923,7 @@ Combat display styles
 .whiteList select,.whiteList select:hover,.whiteList select:focus{
 	border:#fff 2px solid;
 	width: 99%;
-	max-width: 400px;
+	max-width: 300px;
 }
 
 .bratList select,.bratList select:hover,.bratList select:focus{
@@ -943,6 +948,10 @@ Combat display styles
 	border:#AA4BC8 2px solid;
 	width: 99%;
 	max-width: 300px;
+}
+
+.reducedWidth select,.reducedWidth select:hover,.reducedWidth select:focus {
+	max-width: 175px;
 }
 
 /*
