--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -29,6 +29,7 @@ mouse.tooltip:hover span {
 	border: 1px solid #aaa;
 	background-color: #222;
 	padding: 10px 20px 30px 20px;
+	z-index: 200;
 }
 
 #next a {
