Start passage changes
- Changed tab text contents and text color to gold
- Added `GoldCoin.gif` image to the feat boost tab
- Added message about broken images and how to resolve it

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -632,7 +632,7 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	color: #AA4BC8;
 }
 
-.gold {
+.gold, .gold button {
 	color: #FFD700;
 }
 
