--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1238,8 +1238,14 @@ removed unused:
 .layer-doggyhirsute {
 	z-index: 101;
 }
+.layer-sexshoes {
+	z-index: 101;
+}
 .layer-sexunder {
 	z-index: 102;
+}
+.layer-sexbetweenlegs {
+	z-index: 99;
 }
 .layer-sexrightleg {
 	z-index: 100;
