First real commit, things may change

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1736,6 +1736,18 @@ label {
 	filter: hue-rotate(55deg) saturate(100%) brightness(90%) contrast(100%);
 }
 
+/* 
+*	ATENTION: The following colours are not their actually recognised HSB value, as browsers are special little cunts that dont conform to standards
+*	Instead, I had to create these colours labouriously by hand, and they are as close as I could seemingly get to the real deal
+*	I have no idea how to actually replicate any of these colours properly without resorting to a pact with satan
+*	Fuck browsers
+*/
+
+.upper-tan .colour-upper, .lower-tan .colour-lower, .under_lower-tan .colour-under_lower, .under_upper-tan .colour-under_upper, .head-tan .colour-head, .face-tan .colour-face, .neck-tan .colour-neck, .legs-tan .colour-legs, .feet-tan .colour-feet, .upper_acc-tan .colour-upper_acc, .lower_acc-tan .colour-lower_acc, .under_lower_acc-tan .colour-under_lower_acc, .under_upper_acc-tan .colour-under_upper_acc, .head_acc-tan .colour-head_acc, .face_acc-tan .colour-face_acc, .neck_acc-tan .colour-neck_acc, .legs_acc-tan .colour-legs_acc, .feet_acc-tan .colour-feet_acc, .icon-tan {
+	-webkit-filter: hue-rotate(60.3deg) saturate(17.5%) brightness(270%);
+	filter: hue-rotate(60.3deg) saturate(17.5%) brightness(270%);
+}
+
 /* wet clothes */
 .upper-wetblue .colour-upper, .lower-wetblue .colour-lower, .under_lower-wetblue .colour-under_lower, .under_upper-wetblue .colour-under_upper {
 	-webkit-filter: hue-rotate(-120deg) saturate(0.5) brightness(90%) contrast(100%) opacity(0.5);
