new colours, slight sprite alterations, slight text modifications

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1738,6 +1738,22 @@ label {
 	-webkit-filter: hue-rotate(60.3deg) saturate(17.5%) brightness(270%);
 	filter: hue-rotate(60.3deg) saturate(17.5%) brightness(270%);
 }
+.upper-grey .colour-upper, .lower-grey .colour-lower, .under_lower-grey .colour-under_lower, .under_upper-grey .colour-under_upper, .head-grey .colour-head, .face-grey .colour-face, .neck-grey .colour-neck, .legs-grey .colour-legs, .feet-grey .colour-feet, .upper_acc-grey .colour-upper_acc, .lower_acc-grey .colour-lower_acc, .under_lower_acc-grey .colour-under_lower_acc, .under_upper_acc-grey .colour-under_upper_acc, .head_acc-grey .colour-head_acc, .face_acc-grey .colour-face_acc, .neck_acc-grey .colour-neck_acc, .legs_acc-grey .colour-legs_acc, .feet_acc-grey .colour-feet_acc, .icon-grey {
+	-webkit-filter: hue-rotate(58.8deg) saturate(5%) brightness(270%);
+	filter: hue-rotate(58.8deg) saturate(5%) brightness(270%);
+}
+.upper-sand .colour-upper, .lower-sand .colour-lower, .under_lower-sand .colour-under_lower, .under_upper-sand .colour-under_upper, .head-sand .colour-head, .face-sand .colour-face, .neck-sand .colour-neck, .legs-sand .colour-legs, .feet-sand .colour-feet, .upper_acc-sand .colour-upper_acc, .lower_acc-sand .colour-lower_acc, .under_lower_acc-sand .colour-under_lower_acc, .under_upper_acc-sand .colour-under_upper_acc, .head_acc-sand .colour-head_acc, .face_acc-sand .colour-face_acc, .neck_acc-sand .colour-neck_acc, .legs_acc-sand .colour-legs_acc, .feet_acc-sand .colour-feet_acc, .icon-sand {
+	-webkit-filter: hue-rotate(70deg) saturate(2.7%) brightness(340%);
+	filter: hue-rotate(70deg) saturate(2.7%) brightness(340%);
+}
+.upper-off-white .colour-upper, .lower-off-white .colour-lower, .under_lower-off-white .colour-under_lower, .under_upper-off-white .colour-under_upper, .head-off-white .colour-head, .face-off-white .colour-face, .neck-off-white .colour-neck, .legs-off-white .colour-legs, .feet-off-white .colour-feet, .upper_acc-off-white .colour-upper_acc, .lower_acc-off-white .colour-lower_acc, .under_lower_acc-off-white .colour-under_lower_acc, .under_upper_acc-off-white .colour-under_upper_acc, .head_acc-off-white .colour-head_acc, .face_acc-off-white .colour-face_acc, .neck_acc-off-white .colour-neck_acc, .legs_acc-off-white .colour-legs_acc, .feet_acc-off-white .colour-feet_acc, .icon-off-white {
+	-webkit-filter: hue-rotate(70deg) saturate(1.3%) brightness(360%);
+	filter: hue-rotate(70deg) saturate(1.3%) brightness(360%);
+}
+.upper-navy .colour-upper, .lower-navy .colour-lower, .under_lower-navy .colour-under_lower, .under_upper-navy .colour-under_upper, .head-navy .colour-head, .face-navy .colour-face, .neck-navy .colour-neck, .legs-navy .colour-legs, .feet-navy .colour-feet, .upper_acc-navy .colour-upper_acc, .lower_acc-navy .colour-lower_acc, .under_lower_acc-navy .colour-under_lower_acc, .under_upper_acc-navy .colour-under_upper_acc, .head_acc-navy .colour-head_acc, .face_acc-navy .colour-face_acc, .neck_acc-navy .colour-neck_acc, .legs_acc-navy .colour-legs_acc, .feet_acc-navy .colour-feet_acc, .icon-navy {
+	-webkit-filter: hue-rotate(250deg) saturate(7%) brightness(77%);
+	filter: hue-rotate(250deg) saturate(7%) brightness(77%);
+}
 
 /* wet clothes */
 .upper-wetblue .colour-upper, .lower-wetblue .colour-lower, .under_lower-wetblue .colour-under_lower, .under_upper-wetblue .colour-under_upper {
