--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1754,6 +1754,14 @@ label {
 	-webkit-filter: hue-rotate(250deg) saturate(7%) brightness(77%);
 	filter: hue-rotate(250deg) saturate(7%) brightness(77%);
 }
+.upper-olive .colour-upper, .lower-olive .colour-lower, .under_lower-olive .colour-under_lower, .under_upper-olive .colour-under_upper, .head-olive .colour-head, .face-olive .colour-face, .neck-olive .colour-neck, .legs-olive .colour-legs, .feet-olive .colour-feet, .upper_acc-olive .colour-upper_acc, .lower_acc-olive .colour-lower_acc, .under_lower_acc-olive .colour-under_lower_acc, .under_upper_acc-olive .colour-under_upper_acc, .head_acc-olive .colour-head_acc, .face_acc-olive .colour-face_acc, .neck_acc-olive .colour-neck_acc, .legs_acc-olive .colour-legs_acc, .feet_acc-olive .colour-feet_acc, .icon-olive {
+	-webkit-filter: hue-rotate(67deg) saturate(24.5%) brightness(137%);
+	filter: hue-rotate(67deg) saturate(24.5%) brightness(137%);
+}
+.upper-wine .colour-upper, .lower-wine .colour-lower, .under_lower-wine .colour-under_lower, .under_upper-wine .colour-under_upper, .head-wine .colour-head, .face-wine .colour-face, .neck-wine .colour-neck, .legs-wine .colour-legs, .feet-wine .colour-feet, .upper_acc-wine .colour-upper_acc, .lower_acc-wine .colour-lower_acc, .under_lower_acc-wine .colour-under_lower_acc, .under_upper_acc-wine .colour-under_upper_acc, .head_acc-wine .colour-head_acc, .face_acc-wine .colour-face_acc, .neck_acc-wine .colour-neck_acc, .legs_acc-wine .colour-legs_acc, .feet_acc-wine .colour-feet_acc, .icon-wine {
+	-webkit-filter: hue-rotate(351deg) saturate(28%) brightness(90%);
+	filter: hue-rotate(351deg) saturate(28%) brightness(90%);
+}
 
 /* wet clothes */
 .upper-wetblue .colour-upper, .lower-wetblue .colour-lower, .under_lower-wetblue .colour-under_lower, .under_upper-wetblue .colour-under_upper {
