fixed broken wet state due to missing CSS

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1821,6 +1821,34 @@ label {
 	-webkit-filter: opacity(0.5);
 	filter: opacity(0.5);
 }
+.upper-wettan .colour-upper, .lower-wettan .colour-lower, .under_lower-wettan .colour-under_lower, .under_upper-wettan .colour-under_upper, .head-wettan .colour-head, .face-wettan .colour-face, .neck-wettan .colour-neck, .legs-wettan .colour-legs, .feet-wettan .colour-feet, .upper_acc-wettan .colour-upper_acc, .lower_acc-wettan .colour-lower_acc, .under_lower_acc-wettan .colour-under_lower_acc, .under_upper_acc-wettan .colour-under_upper_acc, .head_acc-wettan .colour-head_acc, .face_acc-wettan .colour-face_acc, .neck_acc-wettan .colour-neck_acc, .legs_acc-wettan .colour-legs_acc, .feet_acc-wettan .colour-feet_acc, .icon-wettan {
+	-webkit-filter: hue-rotate(60.3deg) saturate(17.5%) brightness(270%) opacity(0.5);
+	filter: hue-rotate(60.3deg) saturate(17.5%) brightness(270%) opacity(0.5);
+}
+.upper-wetgrey .colour-upper, .lower-wetgrey .colour-lower, .under_lower-wetgrey .colour-under_lower, .under_upper-wetgrey .colour-under_upper, .head-wetgrey .colour-head, .face-wetgrey .colour-face, .neck-wetgrey .colour-neck, .legs-wetgrey .colour-legs, .feet-wetgrey .colour-feet, .upper_acc-wetgrey .colour-upper_acc, .lower_acc-wetgrey .colour-lower_acc, .under_lower_acc-wetgrey .colour-under_lower_acc, .under_upper_acc-wetgrey .colour-under_upper_acc, .head_acc-wetgrey .colour-head_acc, .face_acc-wetgrey .colour-face_acc, .neck_acc-wetgrey .colour-neck_acc, .legs_acc-wetgrey .colour-legs_acc, .feet_acc-wetgrey .colour-feet_acc, .icon-wetgrey {
+	-webkit-filter: hue-rotate(58.8deg) saturate(5%) brightness(270%) opacity(0.5);
+	filter: hue-rotate(58.8deg) saturate(5%) brightness(270%) opacity(0.5);
+}
+.upper-wetsand .colour-upper, .lower-wetsand .colour-lower, .under_lower-wetsand .colour-under_lower, .under_upper-wetsand .colour-under_upper, .head-wetsand .colour-head, .face-wetsand .colour-face, .neck-wetsand .colour-neck, .legs-wetsand .colour-legs, .feet-wetsand .colour-feet, .upper_acc-wetsand .colour-upper_acc, .lower_acc-wetsand .colour-lower_acc, .under_lower_acc-wetsand .colour-under_lower_acc, .under_upper_acc-wetsand .colour-under_upper_acc, .head_acc-wetsand .colour-head_acc, .face_acc-wetsand .colour-face_acc, .neck_acc-wetsand .colour-neck_acc, .legs_acc-wetsand .colour-legs_acc, .feet_acc-wetsand .colour-feet_acc, .icon-wetsand {
+	-webkit-filter: hue-rotate(70deg) saturate(2.7%) brightness(340%) opacity(0.5);
+	filter: hue-rotate(70deg) saturate(2.7%) brightness(340%) opacity(0.5);
+}
+.upper-wetoff-white .colour-upper, .lower-wetoff-white .colour-lower, .under_lower-wetoff-white .colour-under_lower, .under_upper-wetoff-white .colour-under_upper, .head-wetoff-white .colour-head, .face-wetoff-white .colour-face, .neck-wetoff-white .colour-neck, .legs-wetoff-white .colour-legs, .feet-wetoff-white .colour-feet, .upper_acc-wetoff-white .colour-upper_acc, .lower_acc-wetoff-white .colour-lower_acc, .under_lower_acc-wetoff-white .colour-under_lower_acc, .under_upper_acc-wetoff-white .colour-under_upper_acc, .head_acc-wetoff-white .colour-head_acc, .face_acc-wetoff-white .colour-face_acc, .neck_acc-wetoff-white .colour-neck_acc, .legs_acc-wetoff-white .colour-legs_acc, .feet_acc-wetoff-white .colour-feet_acc, .icon-wetoff-white {
+	-webkit-filter: hue-rotate(70deg) saturate(1.3%) brightness(360%) opacity(0.5);
+	filter: hue-rotate(70deg) saturate(1.3%) brightness(360%) opacity(0.5);
+}
+.upper-wetnavy .colour-upper, .lower-wetnavy .colour-lower, .under_lower-wetnavy .colour-under_lower, .under_upper-wetnavy .colour-under_upper, .head-wetnavy .colour-head, .face-wetnavy .colour-face, .neck-wetnavy .colour-neck, .legs-wetnavy .colour-legs, .feet-wetnavy .colour-feet, .upper_acc-wetnavy .colour-upper_acc, .lower_acc-wetnavy .colour-lower_acc, .under_lower_acc-wetnavy .colour-under_lower_acc, .under_upper_acc-wetnavy .colour-under_upper_acc, .head_acc-wetnavy .colour-head_acc, .face_acc-wetnavy .colour-face_acc, .neck_acc-wetnavy .colour-neck_acc, .legs_acc-wetnavy .colour-legs_acc, .feet_acc-wetnavy .colour-feet_acc, .icon-wetnavy {
+	-webkit-filter: hue-rotate(250deg) saturate(7%) brightness(77%) opacity(0.5);
+	filter: hue-rotate(250deg) saturate(7%) brightness(77%) opacity(0.5);
+}
+.upper-wetolive .colour-upper, .lower-wetolive .colour-lower, .under_lower-wetolive .colour-under_lower, .under_upper-wetolive .colour-under_upper, .head-wetolive .colour-head, .face-wetolive .colour-face, .neck-wetolive .colour-neck, .legs-wetolive .colour-legs, .feet-wetolive .colour-feet, .upper_acc-wetolive .colour-upper_acc, .lower_acc-wetolive .colour-lower_acc, .under_lower_acc-wetolive .colour-under_lower_acc, .under_upper_acc-wetolive .colour-under_upper_acc, .head_acc-wetolive .colour-head_acc, .face_acc-wetolive .colour-face_acc, .neck_acc-wetolive .colour-neck_acc, .legs_acc-wetolive .colour-legs_acc, .feet_acc-wetolive .colour-feet_acc, .icon-wetolive {
+	-webkit-filter: hue-rotate(67deg) saturate(24.5%) brightness(137%) opacity(0.5);
+	filter: hue-rotate(67deg) saturate(24.5%) brightness(137%) opacity(0.5);
+}
+.upper-wetwine .colour-upper, .lower-wetwine .colour-lower, .under_lower-wetwine .colour-under_lower, .under_upper-wetwine .colour-under_upper, .head-wetwine .colour-head, .face-wetwine .colour-face, .neck-wetwine .colour-neck, .legs-wetwine .colour-legs, .feet-wetwine .colour-feet, .upper_acc-wetwine .colour-upper_acc, .lower_acc-wetwine .colour-lower_acc, .under_lower_acc-wetwine .colour-under_lower_acc, .under_upper_acc-wetwine .colour-under_upper_acc, .head_acc-wetwine .colour-head_acc, .face_acc-wetwine .colour-face_acc, .neck_acc-wetwine .colour-neck_acc, .legs_acc-wetwine .colour-legs_acc, .feet_acc-wetwine .colour-feet_acc, .icon-wetwine {
+	-webkit-filter: hue-rotate(351deg) saturate(28%) brightness(90%) opacity(0.5);
+	filter: hue-rotate(351deg) saturate(28%) brightness(90%) opacity(0.5);
+}
 
 /*
  * Animation-related classes. Work-in-progress
