Initial separation and tidy up of clothing image code
- Includes transformation fix

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1690,7 +1690,85 @@ label {
 	-webkit-filter: hue-rotate(0deg) brightness(140%) saturate(0%) contrast(100%);
 	filter: hue-rotate(0deg) brightness(140%) saturate(0%) contrast(100%);
 }
+
+/* Clothing specific classes */
+/* Clothing opacity classes need to be applied to a div with the images inside */
+.clothes-div img {
+	position: absolute;
+}
+
+.clothes-damp {
+	-webkit-filter: opacity(0.9);
+	filter: opacity(0.9);
+}
+
+.clothes-wet {
+	-webkit-filter: opacity(0.7);
+	filter: opacity(0.7);
+}
+
+.clothes-drenshed {
+	-webkit-filter: opacity(0.5);
+	filter: opacity(0.5);
+}
+
 /* Clothing: base is red */
+.clothes-blue {
+	-webkit-filter: hue-rotate(-120deg) saturate(100%) brightness(100%) contrast(100%);
+	filter: hue-rotate(-120deg) saturate(100%) brightness(100%) contrast(100%);
+}
+
+.clothes-white {
+	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(440%) contrast(140%);
+	filter: hue-rotate(0deg) saturate(0%) brightness(440%) contrast(140%);
+}
+
+.clothes-red {
+	-webkit-filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
+	filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
+}
+
+.clothes-green {
+	-webkit-filter: hue-rotate(120deg) saturate(100%) brightness(150%) contrast(100%);
+	filter: hue-rotate(120deg) saturate(100%) brightness(150%) contrast(100%);
+}
+
+.clothes-black {
+	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(110%) contrast(110%);
+	filter: hue-rotate(0deg) saturate(0%) brightness(110%) contrast(110%);
+}
+
+.clothes-pink {
+	-webkit-filter: hue-rotate(-30deg) saturate(50%) contrast(100%) brightness(160%);
+	filter: hue-rotate(-30deg) saturate(50%) contrast(100%) brightness(160%);
+}
+
+.clothes-purple {
+	-webkit-filter: hue-rotate(-80deg) saturate(100%) brightness(100%) contrast(100%);
+	filter: hue-rotate(-80deg) saturate(100%) brightness(100%) contrast(100%);
+}
+
+.clothes-tangerine {
+	-webkit-filter: hue-rotate(60deg) saturate(150%) brightness(200%) contrast(100%);
+	filter: hue-rotate(60deg) saturate(150%) brightness(200%) contrast(100%);
+}
+
+.clothes-teal {
+	-webkit-filter: hue-rotate(-180deg) saturate(75%) brightness(200%) contrast(100%);
+	filter: hue-rotate(-180deg) saturate(75%) brightness(200%) contrast(100%);
+}
+
+.clothes-yellow {
+	-webkit-filter: hue-rotate(65deg) saturate(100%) brightness(290%) contrast(300%) sepia(0.55);
+	filter: hue-rotate(65deg) saturate(100%) brightness(290%) contrast(300%) sepia(0.55);
+}
+
+.clothes-brown {
+	-webkit-filter: hue-rotate(55deg) saturate(100%) brightness(90%) contrast(100%);
+	filter: hue-rotate(55deg) saturate(100%) brightness(90%) contrast(100%);
+}
+
+/* Old Clothing classes, need to be removed once all use of them is replaced, this includes the wetness classes */
 .upper-blue .colour-upper, .lower-blue .colour-lower, .under_lower-blue .colour-under_lower, .under_upper-blue .colour-under_upper, .head-blue .colour-head, .face-blue .colour-face, .neck-blue .colour-neck, .legs-blue .colour-legs, .feet-blue .colour-feet, .upper_acc-blue .colour-upper_acc, .lower_acc-blue .colour-lower_acc, .under_lower_acc-blue .colour-under_lower_acc, .under_upper_acc-blue .colour-under_upper_acc, .head_acc-blue .colour-head_acc, .face_acc-blue .colour-face_acc, .neck_acc-blue .colour-neck_acc, .legs_acc-blue .colour-legs_acc, .feet_acc-blue .colour-feet_acc , .icon-blue{
 	-webkit-filter: hue-rotate(-120deg) saturate(100%) brightness(100%) contrast(100%);
 	filter: hue-rotate(-120deg) saturate(100%) brightness(100%) contrast(100%);
