Added a stealing limit and other clothing shop adjustments
- `Steal and send home` changed to `Steal and take home`
- Added if statement to option to prevent `$clothes_choice` from being unset when the default is set to prevent it
- Added steal limit of 20 clothing items, this is reset on visiting a wardrobe

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -675,9 +675,24 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	color: #B7B7B7
 }
 
+.tan {
+	color: #D2B48C;
+}
+
+.sand {
+	color: #FDF5E6;
+}
+
+.olive {
+	color: 	#8E8E38;
+}
+
+.wine {
+	color: #8B3626;
+}
+
 .general {
 	opacity: 0.99;
-
 }
 
 .wetstage2 {
@@ -1766,6 +1781,35 @@ label {
 .clothes-brown {
 	-webkit-filter: hue-rotate(55deg) saturate(100%) brightness(90%) contrast(100%);
 	filter: hue-rotate(55deg) saturate(100%) brightness(90%) contrast(100%);
+}
+
+.clothes-tan {
+	-webkit-filter: hue-rotate(60.3deg) saturate(17.5%) brightness(270%);
+	filter: hue-rotate(60.3deg) saturate(17.5%) brightness(270%);
+}
+.clothes-grey {
+	-webkit-filter: hue-rotate(58.8deg) saturate(5%) brightness(270%);
+	filter: hue-rotate(58.8deg) saturate(5%) brightness(270%);
+}
+.clothes-sand {
+	-webkit-filter: hue-rotate(70deg) saturate(2.7%) brightness(340%);
+	filter: hue-rotate(70deg) saturate(2.7%) brightness(340%);
+}
+.clothes-off-white {
+	-webkit-filter: hue-rotate(70deg) saturate(1.3%) brightness(360%);
+	filter: hue-rotate(70deg) saturate(1.3%) brightness(360%);
+}
+.clothes-navy {
+	-webkit-filter: hue-rotate(250deg) saturate(7%) brightness(77%);
+	filter: hue-rotate(250deg) saturate(7%) brightness(77%);
+}
+.clothes-olive {
+	-webkit-filter: hue-rotate(67deg) saturate(24.5%) brightness(137%);
+	filter: hue-rotate(67deg) saturate(24.5%) brightness(137%);
+}
+.clothes-wine {
+	-webkit-filter: hue-rotate(351deg) saturate(28%) brightness(90%);
+	filter: hue-rotate(351deg) saturate(28%) brightness(90%);
 }
 
 /* Old Clothing classes, need to be removed once all use of them is replaced, this includes the wetness classes */
