--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -411,7 +411,7 @@ mouse.tooltip:hover span {
 }
 
 .stowed{
-	z-index: 298  !important;
+	z-index: 298 !important;
 }
 
 .solidBorderContainer	{
@@ -1859,9 +1859,9 @@ label {
 }
 
 /*
-*	ATENTION: The following colours are not their actually recognised HSB value, as browsers are special little cunts that dont conform to standards
-*	Instead, I had to create these colours labouriously by hand, and they are as close as I could seemingly get to the real deal
-*	I have no idea how to actually replicate any of these colours properly without resorting to a pact with satan
+*	ATTENTION: The following colours are not their actually recognised HSB value, as browsers are special little cunts that don't conform to standards
+*	Instead, I had to create these colours laboriously by hand, and they are as close as I could seemingly get to the real deal
+*	I have no idea how to actually replicate any of these colours properly without resorting to a pact with Satan
 *	Fuck browsers
 */
 
