Multiple Changes relating to player variables
- Added new variables o the `$player` object including `penisExist`, `vaginaExist` and `ballsExist`
- Added new option to the herm feat boost allowing the player to show/hide testicles
- Fix to old sewer event involving the players genitals
- Added removal of older virginities code
- Changed chastity and maths events checks to prevent access to the chastity cage when not male to prevent future herm issues
- Added check to changes some ejaculation lines where the player balls are mentioned to include alternative

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -250,6 +250,21 @@ mouse.tooltip:hover span {
 	margin-top: 2px;
 }
 
+#mobileStats .time {
+	font-size: 1.2em;
+	height: 75px;
+	padding: 0 .3em;
+	writing-mode: vertical-rl;
+	transform: rotate(180deg);
+	/*writing-mode: vertical-lr;
+	text-orientation: upright;
+	padding: 0 .3em;*/
+}
+
+#mobileStats .time .ampm {
+	font-size: 0.5em;
+}
+
 #savesListContainer {
 	display: flex;
 	flex-direction: column;
@@ -890,8 +905,9 @@ body.has-images #story-caption .storyCaptionDivExtended {
 #xrayandroidanal, #divsex #xrayandroidanal {
 	position: relative;
 	left: 0px;
-	top: -150px;
+	top: -8px;
 	z-index: 1;
+	height: 128px;
 }
 
 /*
@@ -2420,6 +2436,20 @@ label {
 	animation-timing-function: steps(8);
 	animation-iteration-count: infinite;
 	animation-name: anim-default;
+}
+
+.height64NoMargin{
+	height: 128px !important;
+}
+
+.height64{
+	margin-top: 64px;
+	height: 128px;
+}
+
+.height128{
+	margin-top: 128px;
+	height: 128px;
 }
 
 /* duration related-classes.
