--- a/devTools/androidsdk/image/cordova/platforms/android/app/src/main/res/xml/config.xml
+++ b/devTools/androidsdk/image/cordova/platforms/android/app/src/main/res/xml/config.xml
@@ -1,9 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget android-packageName="com.degrees.of.lewdity.AppEntry" id="dol" version="0.2.17-dev" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
-    <feature name="Whitelist">
-        <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
-        <param name="onload" value="true" />
-    </feature>
+<widget android-packageName="com.vrelnir.DegreesOfLewdity" id="dol" version="0.2.17-dev" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <name short="DoL">Degrees of Lewdity</name>
     <description>Degrees of Lewdity</description>
     <author email="9096-Vrelnir@users.noreply.gitgud.io" href="https://gitgud.io/Vrelnir/degrees-of-lewdity">
